@@ -125,6 +125,8 @@ Fixes:
  * Fix crash bug in @sitelock/remove [SW]
  * ssl_slave would drop connections if it couldn't resolve a valid hostname
    for the connecting IP address. [SW]
+ * Non-matching regexp captures ($0, $<foo>, etc) sometimes had the value
+   of the previous matching capture. From a report by Sketch. [MG]
 
 
 Version 1.8.4 patchlevel 8                                 Nov 11, 2011
